add two struct for swagger: TagSwagger ArticleSwagger
