# internal/model/tag.go
@@ -1,9 +1,17 @@
 package model
 
+import "blog_service/pkg/app"
+
 type Tag struct {
 	*Model
-	Name  string `json:"name"`
-	State uint8  `json:"state"`
+	Name   string `json:"name"`
+	State  uint8  `json:"state"`
+	Conent interface{}
+}
+
+type TagSwagger struct {
+	List  []*Tag
+	Pager *app.Pager
 }
 
 func (t Tag) TableName() string {
